Copy about.html into products.html page and update navigation on all pages

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#">Products</a></li>
+                    <li><a href="products.html">Products</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
@@ -85,9 +85,9 @@
 
         <footer>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Products</a>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="products.html">Products</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
             </nav>
