--- a/products.html
+++ b/products.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Sprint Challenge - About</title>
+  <title>Sprint Challenge - Products</title>
 
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="container about-page">
+  <div class="container products-page">
     <!-- Header/Navigation -->
     <header>
       <nav>
@@ -26,7 +26,7 @@
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
-      <img src="img/jumbo-about.png" alt="Car headlights on highway">
+      <img src="img/paradise.png" alt="Car headlights on highway">
     </header>
 
     <main>
