Add animations and update products page with content

--- a/products.html
+++ b/products.html
@@ -3,103 +3,123 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
 
-  <title>Sprint Challenge - Products</title>
+    <title>Sprint Challenge - Products</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
 
 </head>
 
 <body>
-  <div class="container products-page">
-    <!-- Header/Navigation -->
-    <header>
-      <nav>
-        <img src="img/lambda-black.png" alt="Lambda Logo">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="products.html">Products</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-      <img src="img/paradise.png" alt="Car headlights on highway">
-    </header>
+    <div class="container products-page">
+        <!-- Header/Navigation -->
+        <header>
+            <nav>
+                <img src="img/lambda-black.png" alt="Lambda Logo">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <img src="img/paradise.png" alt="Car headlights on highway">
+        </header>
 
-    <main>
-      <div>
-        <h1>About</h1>
-        <p>
-          Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to
-          corporate
-          strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic
-          world
-          view of disruptive innovation via workplace diversity and empowerment.
-        </p>
-      </div>
+        <main>
+            <div>
+                <h1>Products</h1>
+                <p>
+                    Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative
+                    approaches to
+                    corporate
+                    strategy foster collaborative thinking to further the overall value proposition. Organically grow
+                    the holistic
+                    world
+                    view of disruptive innovation via workplace diversity and empowerment.
+                </p>
+            </div>
 
 
-      <!-- Middle section -->
-      <section class="about-boxes">
-        <div class="about-box">
-          <img src="img/about-plan.png" alt="strategy">
-          <h2>Strategy</h2>
-          <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-            proposition.</p>
-          <a class="learn-more-btn" href="#">Learn More</a>
-        </div>
+            <!-- Middle section -->
+            <section class="product-boxes">
+                <div class="product-box">
+                    <img src="img/git.png" alt="strategy">
+                    <h2>Git</h2>
+                    <b class="price">FREE</b>
+                    <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall
+                        value
+                        proposition.</p>
+                    <a class="btn" href="https://git-scm.com/downloads" target="_blank">Download</a>
+                </div>
 
-        <div class="about-box">
-          <img src="img/about-working.png" alt="strategy">
-          <h2>How We Work</h2>
-          <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-            proposition.</p>
-          <a class="learn-more-btn" href="#">Learn More</a>
-        </div>
+                <div class="product-box">
+                    <img src="img/vscode.png" alt="strategy">
+                    <h2>Visual Studio Code</h2>
+                    <b class="price">FREE</b>
+                    <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall
+                        value
+                        proposition.</p>
+                    <a class="btn" href="https://code.visualstudio.com/download" target="_blank">Download</a>
+                </div>
 
-        <div class="about-box">
-          <img src="img/about-office.png" alt="strategy">
-          <h2>Places We Work</h2>
-          <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-            proposition.</p>
-          <a class="learn-more-btn" href="#">Learn More</a>
-        </div>
+                <div class="product-box">
+                    <img src="img/lambdahat.png" alt="strategy">
+                    <h2>Lambda Hat</h2>
+                    <b class="price">$20</b>
+                    <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall
+                        value
+                        proposition.</p>
+                    <a class="btn" href="https://www.lambdaschoolshop.com/product-page/lambda-shield-hat" target="_blank">Buy Now</a>
+                </div>
 
-        <div class="about-box">
-          <img src="img/about-meeting.png" alt="strategy">
-          <h2>Collaboration</h2>
-          <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
-            proposition.</p>
-          <a class="learn-more-btn" href="#">Learn More</a>
-        </div>
-      </section>
+                <div class="product-box comic">
+                    <img src="img/comic.png" alt="strategy">
+                    <h2>Comic Sans</h2>
+                    <b class="price">$9,001</b>
+                    <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall
+                        value
+                        proposition.</p>
+                    <a class="btn" href="https://youtu.be/dQw4w9WgXcQ" target="_blank">Buy Now</a>
+                </div>
+            </section>
 
-      <!-- End Middle Section -->
-      <div class="lets-work-together">
-        <h2>Let's Work Together</h2>
-        <p>
-          Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to
-          corporate
-          strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic
-          world
-          view of disruptive innovation via workplace diversity and empowerment.
-        </p>
-      </div>
-    </main>
+            <!-- End Middle Section -->
+            <div class="subscribe">
+                <form action="action_page.php">
+                    <div class="w3-container">
+                        <h2>Subscribe to our Newsletter</h2>
+                        <p>Lorem ipsum..</p>
+                    </div>
 
-    <footer>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="products.html">Products</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
-      </nav>
-    </footer>
-  </div><!-- container -->
+                    <div class="w3-container" style="background-color:white">
+                        <input type="text" placeholder="Name" name="name" required>
+                        <input type="text" placeholder="Email address" name="mail" required>
+                        <label>
+                            <input type="checkbox" checked="checked" name="subscribe"> Daily Newsletter
+                        </label>
+                    </div>
+
+                    <div class="w3-container">
+                        <input type="submit" value="Subscribe">
+                    </div>
+                </form>
+            </div>
+        </main>
+
+        <footer>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="products.html">Products</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </nav>
+        </footer>
+    </div><!-- container -->
 </body>
 
 </html>
