--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
           <h2>Strategy</h2>
           <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
             proposition.</p>
-          <a class="learn-more-btn" href="#">Learn More</a>
+          <a class="btn" href="#">Learn More</a>
         </div>
 
         <div class="about-box">
@@ -57,7 +57,7 @@
           <h2>How We Work</h2>
           <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
             proposition.</p>
-          <a class="learn-more-btn" href="#">Learn More</a>
+          <a class="btn" href="#">Learn More</a>
         </div>
 
         <div class="about-box">
@@ -65,7 +65,7 @@
           <h2>Places We Work</h2>
           <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
             proposition.</p>
-          <a class="learn-more-btn" href="#">Learn More</a>
+          <a class="btn" href="#">Learn More</a>
         </div>
 
         <div class="about-box">
@@ -73,7 +73,7 @@
           <h2>Collaboration</h2>
           <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value
             proposition.</p>
-          <a class="learn-more-btn" href="#">Learn More</a>
+          <a class="btn" href="#">Learn More</a>
         </div>
       </section>
 
